fix overlap in nav with content

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,15 @@
 .nav {
-  position: fixed;
+  position: fixed; 
   padding: 1rem;
   z-index: 10;
   box-shadow: 0px -1px 5px rgb(0 0 0 / 19%);
-  @apply inset-x-0 bottom-0 bg-white sm:static  ;
+  @apply inset-x-0 bottom-0 bg-white sm:static;
 }
 .list {
-@apply flex justify-between space-x-6 sm:justify-center
+  @apply flex justify-center space-x-6 sm:justify-center;
 }
 .item {
-  @apply basis-1/5 sm:basis-[5rem]
+  @apply basis-1/5 sm:basis-[5rem];
 }
 .pageLink {
   display: flex;
@@ -26,5 +26,5 @@
   @apply sm:hidden;
 }
 .pageLink[data-active="true"] {
-  @apply  text-orange-500 font-bold scale-105 drop-shadow-md sm:bg-orange-50;
+  @apply text-orange-500 font-bold scale-105 drop-shadow-md sm:bg-orange-50;
 }
